<?xml version="1.0" encoding="utf-8"?><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <EditText
        android:id="@+id/product_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:paddingBottom="@dimen/dp_eight" />

    <EditText
        android:id="@+id/product_price_text"
        android:hint="@string/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:paddingBottom="@dimen/activity_margin" />

    <TextView
        android:id="@+id/quantity_header"
        android:text="@string/product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/decrement_button"
            android:layout_width="@dimen/button_dimens"
            android:layout_height="@dimen/button_dimens"
            android:text="-" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_eight"
            android:paddingRight="@dimen/dp_eight"
            android:text="@string/initial_quantity_value"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/increment_button"
            android:layout_width="@dimen/button_dimens"
            android:layout_height="@dimen/button_dimens"
            android:text="+" />

    </LinearLayout>

    <EditText
        android:id="@+id/supplier_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/supplier_name"
        android:paddingBottom="@dimen/dp_eight" />
    <EditText
        android:id="@+id/supplier_number_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/supplier_number"
        android:inputType="number"
        android:paddingBottom="@dimen/dp_eight" />

    <Button
        android:id="@+id/contact_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/contact_supplier"/>


</LinearLayout>